force-app/main/default/objects/Payment__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <formula>&apos;1205&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BankAccount</label>
    <type>Text</type>
</CustomField>