force-app/main/default/objects/Payment__c/fields/Enqix_Id__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Id__c</fullName>
    <externalId>true</externalId>
    <label>Enqix_Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>