force-app/main/default/objects/Payment__c/fields/nl_done__c.field-meta.xml
<CustomField>
    <fullName>nl_done__c</fullName>
    <label>nl_done</label>
    <type>DateTime</type>
</CustomField>