force-app/main/default/objects/Payment__c/fields/ReverseAmount__c.field-meta.xml
<CustomField>
    <fullName>ReverseAmount__c</fullName>
    <formula>0-Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReverseAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>