force-app/main/default/objects/Payment__c/fields/Unallocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Amount__c</fullName>
    <label>Unallocated Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>