force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Enqix_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>PaymentDate__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>TimeStamp_Insert__c</columns>
    <columns>TimeStamp_Update__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>