force-app/main/default/objects/Payment__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>PaymentDate__c</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Enqix_Id__c</columns>
    <columns>Unallocated_Amount__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Almeida</value>
    </filters>
    <label>All</label>
</ListView>